--- a/styles/globals.css
+++ b/styles/globals.css
@@ -84,17 +84,31 @@ body{
 }
 
 .header1 {
-    color: var(--color4);
+    color: var(--color1);
+    text-align: center;
+    text-shadow: 0 0 10px var(--color3);
+    -webkit-text-stroke: 0.1px var(--color4)
+}
+
+.header2 {
+    color: var(--color2);
     text-align: center;
     text-shadow: 0 0 10px var(--color3);
 }
 
+
 .header3 {
     color: var(--color3);
     text-align: center;
-    text-shadow: 0 0 10px var(--color2);
+    text-shadow: 0 0 10px var(--color4);
+    -webkit-text-stroke: 0.1px var(--color1)
+    
 }
 
-
+.header4 {
+    color: var(--color4);
+    text-align: center;
+    text-shadow: 0 0 10px var(--color3);
+}
 
 
