--- a/styles/home.css
+++ b/styles/home.css
@@ -4,6 +4,10 @@
     border: .3rem solid var(--color3);
     border-radius: 100%;
 }
+
+.about_image:active{
+    transform: translateX(0);
+}
 .motivation-text {
     max-width:38rem;
     color: var(--color4);
@@ -105,7 +109,6 @@
   letter-spacing: 0.1rem;
   transition: 0.5s;
   z-index: 1;
-  
 }
 
 .button:hover {
@@ -125,6 +128,7 @@
   z-index: -1;
   transform: scale(0);
   transition: 0.3s;
+
 }
 
 .button:hover::before {
