--- a/style_modules/projectCard.module.css
+++ b/style_modules/projectCard.module.css
@@ -1,10 +1,4 @@
-/* .project-card {
-    background-color: var(--color1);
-    border: 4px solid var(--color3);
-    box-shadow: 0 10px 10px black;
-} */
-
-.article-card {
+.card {
     width: 300px;
     height: 200px;
     border-radius: 12px;
@@ -16,18 +10,18 @@
     border: 3px solid var(--color3);
   }
   
-  .article-card:hover {
+  .card:hover {
     transform: translateY(-2px);
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
   }
   
-  .article-card img {
+  .card img {
     width: 100%;
     height: 100%;
     object-fit:cover;
   }
   
-  .article-card .content {
+  .card .content {
     box-sizing: border-box;
     width: 100%;
     position: absolute;
@@ -37,14 +31,12 @@
     background: linear-gradient(transparent, rgba(0, 0, 0, 0.6));
     
   }
-  
 
-
-  .article-card .description {
+  .card .description {
     margin: 0;
   }
   
-  .article-card .description {
+  .card .description {
     font-size: 17px;
     color: var(--color4);
     text-shadow: 0 8px 1px black;
